manifests/prisma.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prisma
  namespace: prisma
  labels:
    stage: production
    name: prisma
    app: prisma
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        stage: production
        name: prisma
        app: prisma
    spec:
      containers:
        - name: prisma
          image: prismagraphql/prisma:1.34.0
          ports:
            - containerPort: 4466
---
apiVersion: v1
kind: Service
metadata:
  name: prisma
  namespace: prisma
spec:
  type: NodePort
  selector:
    stage: production
    name: prisma
    app: prisma
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: prisma-ingress
  namespace: prisma
spec:
  rules:
  - host: prisma.sphere.sh
    http:
      paths:
      - backend:
          serviceName: prisma
          servicePort: 80
